# navi2pg

./: .gitignore  CMakeLists.txt  README.md  command_line_parser.cpp  command_line_parser.h  logger.cpp  logger.h  main.cpp  navi2pg.cpp  navi2pg.h
images/: Бар подводный.xcf  Буй (Супербуй).xcf  Буй (Цилиндрический).xcf  Буй кардинальный (веха).xcf  Буй кардинальный (конический).xcf  Буй кардинальный (столб).xcf  Буй кардинальный.xcf  Буй латеральный (конический).xcf  Буй латеральный (цилиндр).xcf  Буй латеральный.xcf  Буй отд.опасности (веха).xcf  Буй спец.назначения (супербуй).xcf  Буй чистой воды (сферический).xcf  Водоросли.xcf  Ворота кессонные.xcf  Ворота шлюза.xcf  Дневной ориентир (несветящий) 1.xcf  Затонувшее судно.xcf  Знак латеральный (дерево2).xcf  Знак латеральный (констр).xcf  Знак латеральный (маяк).xcf  Знак спец. назначения (внимение).xcf  Знак спец.назначения (веха).xcf  Знак спец.назначения (вышка).xcf  Знак спец.назначения (констр).xcf  Знак спец.назначения (маяк).xcf  Знак спец.назначения (общ).xcf  Зона пребрежного плавания - периметр.xcf  Зона пребрежного плавания - центр.xcf  Кабель навесной.xcf  Кабель подводный.xcf  Контрольная точка передачи (1 путь).xcf  Ландмарк (башня).xcf  Ландмарк (труба).xcf  Ландмарк.xcf  Магнитное склонение.xcf  Место встречи с лоцманом.xcf  Морская платформа.xcf  Морская ферма.xcf  ОТД.Строения (Церкви) (Вид.рад).xcf  (+45 more)
templates/: mapnik.py.template  mapnik.xml.template  mapserver.map.template
templates/symbols/: symbols.sym
